objects/TableList__c.object
<CustomObject>
    <fields>
        <fullName>NoOfPerson__c</fullName>
        <label>NoOfPerson</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Serving</fullName>
                </value>
                <value>
                    <fullName>ReadyForBill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TableNo__c</fullName>
        <label>TableNo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>opportunitynew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>opportunity</label>
        <referenceTo>opportunity__c</referenceTo>
        <relationshipLabel>TableLists</relationshipLabel>
        <relationshipName>TableLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TableList</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TableList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TableLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>